--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>HOLA QUE TAL    </h1>
+    <h1>HOLA QUE TAL    </h1>
+    <h1>HOLA QUE TAL    </h1>
+    <h1>HOLA QUE TAL    </h1>
 </body>
 </html>
